--- a/package.json
+++ b/package.json
@@ -1,33 +1,36 @@
 {
-  "name": "saltr-html5-sdk",
-  "version": "1.0.0",
-  "description": "SALTR HTML5 SDK",
-  "main": "index.js",
-  "scripts": {
-    "build": "webpack",
-    "test": "mocha -r ts-node/register test/test.ts"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/SALTR/saltr-html5-sdk.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/SALTR/saltr-html5-sdk/issues"
-  },
-  "homepage": "https://github.com/SALTR/saltr-html5-sdk#readme",
-  "devDependencies": {
-    "@types/chai": "^4.1.3",
-    "@types/mocha": "^5.2.0",
-    "@types/request": "^2.47.0",
-    "request": "^2.85.0",
-    "chai": "^4.1.2",
-    "mocha": "^5.2.0",
-    "ts-loader": "^4.3.0",
-    "ts-node": "^6.0.3",
-    "typescript": "^2.8.3",
-    "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.3"
-  }
+	"name": "saltr-js-sdk",
+	"version": "1.0.0",
+	"description": "SALTR JS SDK",
+	"main": "bundle.js",
+	"scripts": {
+		"build": "webpack --mode=production",
+		"test": "mocha -r ts-node/register test/test.ts"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/SALTR/saltr-html5-sdk.git"
+	},
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/SALTR/saltr-html5-sdk/issues"
+	},
+	"homepage": "https://github.com/SALTR/saltr-html5-sdk#readme",
+	"devDependencies": {
+		"@types/chai": "^4.1.3",
+		"@types/mocha": "^5.2.0",
+		"chai": "^4.1.2",
+		"mocha": "^5.2.0",
+		"ts-loader": "^4.3.0",
+		"ts-node": "^6.0.3",
+		"typescript": "^2.8.3",
+		"webpack": "^4.8.3",
+		"webpack-cli": "^2.1.3"
+	},
+	"dependencies": {
+		"@types/form-data": "^2.2.1",
+		"axios": "^0.18.0",
+		"form-data": "^2.3.2"
+	}
 }
