--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"ts-loader": "^4.3.0",
 		"ts-node": "^6.0.3",
 		"typescript": "^2.8.3",
+		"uglifyjs-webpack-plugin": "^1.2.7",
 		"webpack": "^4.8.3",
 		"webpack-cli": "^2.1.3"
 	},
